# Pardus-Backup

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: pardus-backup.desktop
data/man/: pardusbackup-gui.1  pardusbackup.1
debian/: changelog  control  copyright  pardus-backup.manpages  rules
pardusbackup/: __init__.py  __main__.py  backend.py  config.py  gui.py  listing.py  planning.py  restore.py
tests/: conftest.py  test_args.py  test_checks.py  test_multisource.py  test_partial.py  test_planning.py  test_restore.py  test_snapshot.py
