[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pardusbackup"
version = "0.1.0"
description = "rsync tabanlı artımlı yedekleme aracı"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
gui = ["PyGObject>=3.42"]

[project.scripts]
pardusbackup = "pardusbackup.__main__:main"

[project.gui-scripts]
pardusbackup-gui = "pardusbackup.gui:main"

[tool.setuptools.packages.find]
include = ["pardusbackup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "-v"